--- a/tugas2.html
+++ b/tugas2.html
@@ -31,6 +31,7 @@
         .Images {
         display: flex;
         position: relative;
+        flex-direction: space-beetwen;
     }
 
     .Images img {
