--- a/Gorillaz.html
+++ b/Gorillaz.html
@@ -42,7 +42,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="OT.css">
     <link rel="icon" type="images/icon" href="https://media.istockphoto.com/id/1285409652/id/vektor/maskot-sugar-glider-desain-logo-esport.jpg?s=612x612&w=0&k=20&c=g_05v_OSJ3KTr7JnJ8GGFoDiZKEQw3KQlxPtftdOr7Q=">
-    <title>Glider</title>
+    <title>Glider Games</title>
 </head>
 <body>
     <div class="sugar-glider">
