--- a/Gorillaz5.html
+++ b/Gorillaz5.html
@@ -1,119 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-    <style>
-
-        body {
-            background-color: antiquewhite;
-            font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
-        }
-
-        .Gorlaz h1{
-            background-color: red  ;
-            text-align: center;
-            padding: 1em;
-        }
-
-        .ajis-jaringan {
-            padding-left: 20px;
-        }
-
-        .pitbull h2{
-            background-color: red;
-            text-align: center;
-            padding: 1em;
-        }
-
-        .yt h2{
-            background-color: red;
-            text-align: center;
-            padding: 1em;
-        }
-
-        .yt iframe {
-            padding-left: 30%;
-        }
-
-        .Tabel h2{
-            background-color: red;
-            text-align: center;
-            padding: 1em;
-        }
-
-        .Tabel table{
-            padding-left: ;
-        }
-
-
-    </style>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gorillaz</title>
-    <link rel="icon" type="images/icon" href="https://render.fineartamerica.com/images/rendered/default/poster/8/8/break/images/artworkimages/medium/3/1-gorillaz-2d-jordy-walls.jpg">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="Gorillaz5.css">
+  <title>One Piece</title>
 </head>
 <body>
-    <main class="cen-sec">
-        <div class="Gorlaz">
-            <h1>Gorillaz</h1>
-            <p>Gorillaz are an English virtual band formed in 1998 by musician Damon Albarn and artist Jamie Hewlett, from London. The band primarily consists of four fictional members: 2-D (vocals, keyboards), Murdoc Niccals (bass guitar), Noodle (guitar, keyboards, vocals) and Russel Hobbs (drums). Their universe is presented in media such as music videos, interviews, comic strips and short cartoons. Gorillaz' music has featured collaborations with a wide range of featured artists, with Albarn as the only permanent musical contributor. <br><br>
-            With Gorillaz, Albarn departed from the distinct Britpop sound of his band Blur, exploring a variety of musical styles including hip hop, electronic and world music.[2] The band's 2001 debut album, Gorillaz, which features dub, Latin and punk influences, went triple platinum in the UK and double platinum in Europe, with sales driven by the success of the lead single, "Clint Eastwood". Their second studio album, Demon Days (2005), went six times platinum in the UK[3] and double platinum in the US and spawned the successful lead single "Feel Good Inc."[4][5][6] The band's third album, Plastic Beach (2010), featured environmentalist themes, synth-pop elements[7] and an expanded roster of featured artists. Their fourth album, The Fall, was recorded on the road during the Escape to Plastic Beach Tour and released on 25 December 2010.</p>
-        </div>
+  <header class="piece-head">
+    <!-- <div class="sec-one-piece"> -->
+      
+      <a href="#" class="logo">One Piece</a>
+        <nav class="top-nav">
+          <a href="#home">Home</a>
+          <a href="#chapter">Chapter</a>
+          <a href="#">About</a>
+        </nav>
+    <!-- </div> -->
+  </header>
+  <main>
+    <section class="image-background" id="Home">
+      <div class="bg-image">
+        <h2>Tidak peduli seberapa sulit atau seberapa tidak mungkin untuk digapai, jangan pernah melupakan tujuanmu.</h2>
+        <h3>- Monkey D. Luffy</h3>
+      </div>
+    </section>
 
-        <div class="ajis-jaringan">
-            <h2>Menu</h2>
-        </div>
-
-        <div class="Gorlazz">
-            <ul class="ul-gorlazz">
-                <li><a href="#Profil">Profil</a></li>
-                <li><a href="#Album">Album</a></li>
-                <li><a href="#About">About</a></li>
-            </ul>
-        </div>
-
-        <div class="pitbull" id="Profil">
-            <h2>Profil</h2>
-            <p>The band was created by Damon Albarn, frontman of the Britpop band Blur, and Jamie Hewlett, the co-creator of the comic book series Tank Girl. Their style is known for its variety and genre-blending, with influences from many different types of music, but most notably from hip-hop, dub-reggae, electro, and pop. More recently, they have also obtained influences from R&B, soul, and Chicago house music.
-            Gorillaz, unlike other fictional bands, were not created as a parody of a particular genre (GWAR, Dethklok), marketed to young children (Alvin and The Chipmunks), depictions of the people behind the band (Prozzak), or created for television (The Archies, Josie and The Pussycats, Dr. Teeth and The Electric Mayhem). Instead, Gorillaz were originally created to be explored through the internet (a new medium at the time), and were intended for an older audience than the cartoon bands before them, while the quality of their actual musical output was usually more of an attraction to their fans than their existence as cartoon characters. The bands that influence their music range from Massive Attack and The Specials, to De La Soul and A Tribe Called Quest, to Daft Punk and Beck, while they are visually inspired by Hanna Barbera, Looney Tunes, Mad Magazine, Heavy Metal, 2000 AD, and many classic horror and cyberpunk movies. They have said that The Simpsons was a big influence on Gorillaz for “the way that they invade popular culture and comment on it in a pretty organic way”. Today, Albarn says that Gorillaz was developed out of “a very morbid obsession with the end of the world”.
-            <br><br>The band started their career with their debut extended play Tomorrow Comes Today on November 2000, followed by their debut single Clint Eastwood and the self-titled album Gorillaz a few months later in March 2001, where the other singles - 19-2000, Rock the House and Tomorrow Comes Today - performing fairly well, with every one of them reaching the Top 35 in the UK. Clint Eastwood, released a few weeks before the self-titled album's release (05/03/01), spawned their first hit in the US reaching #57 on their Billboard Hot 100 Chart. The self-titled debut album reached #3 in the UK and 14 in the US, going 3x platinum in the UK and Platinum in the US, selling 7 million copies worldwide. Gorillaz' debut brought them the title of "The Biggest Virtual Band" by The Guinness World Record. Gorillaz then returned with the song Rockit in 2004 as part of the Reject False Icons campaing and their second studio album, Demon Days, in May 2005, spawning the singles Feel Good Inc., DARE, Dirty Harry, Kids With Guns and El Mañana, which all charted in the top 30 position in the UK, with the first three singles reaching the top 10 position as well. Demon Days' debut single, Feel Good Inc., also released a few days prior to the album (09/05/05), reached an all-time best in the US, with #14 spot, outperforming its predecessors Clint Eastwood and 19-2000. Demon Days reached #1 in the UK and #6 in the US, going 6x Platinum in the UK and 2x Platinum in the US, selling 8 million copies worldwide. Gorillaz then returned with the (relatively unsuccessful) album Plastic Beach (2010), which reached #2 in the UK and the US and went Platinum in the UK, selling 1.4 million copies globally. Plastic Beach was then followed up with The Fall (2010), which reached n#12 in the UK and 24 in the US, selling 180k copies. Gorillaz then took a hiatus, running from 2012 to late 2016, which began after the release of the single DoYaThing.
-            </p>
-        </div>
-
-        <div class="yt" id="About">
-            <h2>Musik</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8tQFFkp1mt0?si=XYJFyw098ZESKYqC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-
-        <div class="Tabel" id="Album">
-            <h2>Album</h2>
-            <table class="head-tab" border="1px solid">
-                <tr>
-                    <th>Year</th>
-                    <td>2007</td>
-                </tr>
-                <tr>
-                    <th>Album</th>
-                    <td>Demon Days</td>
-                </tr>
-                <tr>
-                    <th>List Song</th>
-                    <td>kids With Guns</td>
-                </tr>
-                <tr>
-                    <th></th>
-                    <td>Dare</td>
-                </tr>
-                <tr>
-                    <th></th>
-                    <td>Feel Good Inc</td>
-                </tr>
-                <tr>
-                    <th></th>
-                    <td>All Alone</td>
-                </tr>
-            </table>
-        </div>
-    </main>
+    <section class="op-chapter" id="chapter">
+      <div class="chapter-op">
+        <h1>Chapter One Piece</h1>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
