--- a/Gorillaz5.html
+++ b/Gorillaz5.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="Gorillaz5.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>One Piece</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
         <nav class="top-nav">
           <a href="#home">Home</a>
           <a href="#chapter">Chapter</a>
-          <a href="#">About</a>
+          <a href="#about">About</a>
         </nav>
     <!-- </div> -->
   </header>
@@ -27,9 +28,83 @@
     </section>
 
     <section class="op-chapter" id="chapter">
-      <div class="chapter-op">
+      <!-- <div class="chapter-op">
         <h1>Chapter One Piece</h1>
+      </div> -->
+      <!-- <div class="img-char">
+        <img src="https://assets.pikiran-rakyat.com/crop/0x0:0x0/750x500/photo/2022/09/19/2839848650.jpg" alt="">
+        <img src="https://assets.pikiran-rakyat.com/crop/0x0:0x0/750x500/photo/2022/09/19/2839848650.jpg" alt="">
+        <img src="https://assets.pikiran-rakyat.com/crop/0x0:0x0/750x500/photo/2022/09/19/2839848650.jpg" alt="">
+        <img src="https://assets.pikiran-rakyat.com/crop/0x0:0x0/750x500/photo/2022/09/19/2839848650.jpg" alt="">
+      </div> -->
+
+
+      <!-- PRODUCT CARD   -->
+      <div class="teks" id="about">
+        <h2>Character One Piece</h2>
+    </div>
+    <div class="product-card">
+        <div class="card">
+            <img class="img-card" src="https://media.tenor.com/caUlolUYCdoAAAAC/luffy.gif" alt="">
+            <div class="bio">
+                <h1>Monkey D. Luffy</h1>
+                <p>Kapten Bajak Laut Topi Jerami</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img class="img-card" src="https://24.media.tumblr.com/8ed956a2d8713771993396ae6c3fd7f3/tumblr_mn09or78iD1qzj0r9o1_500.gif" alt="">
+            <div class="bio">
+                <h1>Roronoa Zorro</h1>
+                <p>Crew Bajak Laut Topi Jerami</p>
+            </div>
+        </div>
+   
+        <div class="card" id="layanan">
+                <img class="img-card" src="https://media.tenor.com/vGgIxakfkZ4AAAAC/nami-laughing.gif" alt="">
+                <div class="bio">
+                <h1>Nami</h1>
+                <p>Crew Bajak Laut Topi Jerami</p>
+            </div>
+        </div>
+            <div class="card">
+                <img class="img-card" src="https://giffiles.alphacoders.com/219/219459.gif" alt="">
+            <div class="bio">
+                <h1>Usopp</h1>
+                <p>Crew Bajak Laut Topi Jerami</p>
+            </div>
+        </div>
+    </div>
+    
+    <div class="iseng">
+      <div class="iseng-img1">
+        <img src="https://png.pngtree.com/png-vector/20230801/ourmid/pngtree-cartoon-one-piece-stickers-with-a-hat-vector-png-image_6818478.png" alt="">
       </div>
+      <div class="footer">
+        <div class="footer-yt">
+          <i class="fa fa-youtube-play"><a href="">Youtube</a></i>
+        </div>
+        <div class="footer-ig">
+          <i class="fa fa-instagram"> <a href="">Instagram</a></i>
+        </div>
+        <div class="footer-x">
+          <i class="fa fa-twitter"> <a href="">Twitter</a></i>
+        </div>
+        <div class="footer-fb">
+          <i class="fa fa-facebook-f"> <a href="">Instagram</a></i>
+        </div>
+      </div>
+      <div>
+        <label for="comment"> Comment <br>
+          <input type="text" name="Comment" id="comment">
+          <input type="button" value="submit" >
+        </label>
+      </div>
+      <div class="iseng-img2">
+        <img src="https://seeklogo.com/images/O/one-piece-logo-14D1E5876D-seeklogo.com.png" alt="">
+      </div>
+      
+    </div>
     </section>
   </main>
 </body>
