--- a/Gorillaz5.html
+++ b/Gorillaz5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil Windah Basudara</title>
+    <title>Gorillaz</title>
     <link rel="icon" type="image" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSM5uTdHBVDceGFkr573CsULidUJ4T_x4Vlj8HajOI8wYFhptV7JBsxWKeWMGapDUy5tFw&usqp=CAU">
     <!-- ICON WEBSITE -->
 </head>
