--- a/UTS/3.html
+++ b/UTS/3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="icon" type="icon/images" href="https://render.fineartamerica.com/images/rendered/default/poster/8/8/break/images/artworkimages/medium/3/5-gorillaz-band-special-design-logo-birch-twigley.jpg">
+    <link rel="icon" type="icon/images" href="https://i.pinimg.com/474x/6a/af/d1/6aafd10f0818493d44ad30043315feaf.jpg">
     <!-- Font Goggle -->
     <link href="https://fonts.googleapis.com/css2?family=Fuggles&family=Noto+Sans+JP&family=Poppins&family=Yuji+Hentaigana+Akari&display=swap" rel="stylesheet">
     <!-- Icon Box -->
