--- a/UTS/3.html
+++ b/UTS/3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="icon" type="icon/images" href="https://i.pinimg.com/474x/6a/af/d1/6aafd10f0818493d44ad30043315feaf.jpg">
+    <link rel="icon" type="icon/images" href="https://render.fineartamerica.com/images/rendered/default/poster/8/8/break/images/artworkimages/medium/3/5-gorillaz-band-special-design-logo-birch-twigley.jpg">
     <!-- Font Goggle -->
     <link href="https://fonts.googleapis.com/css2?family=Fuggles&family=Noto+Sans+JP&family=Poppins&family=Yuji+Hentaigana+Akari&display=swap" rel="stylesheet">
     <!-- Icon Box -->
@@ -44,7 +44,7 @@
                 <div class="tittle">
                     <p> "Setiap tegukan kopi membawa cita rasa yang mendalam dan aroma yang menggoda selama setengah jam kunjungan Anda." </p>
                     <h3>- SETENGAH JAM KOPI</h3>
-                    <a href="#">Order Now</a>
+                    <a href="regis">Order Now</a>
                 </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
             Kafe Setengah Jam Kopi adalah tempat yang cocok bagi mereka yang mencari pengalaman santai dan singkat untuk menikmati kopi yang lezat. Dengan desain interior yang nyaman, kafe ini menyediakan suasana hangat dan ramah yang membuat pengunjung merasa seperti di rumah sendiri.
             <br><br>
             Menu kopi mereka beragam, mulai dari kopi klasik hingga kreasi unik barista. Setiap tegukan kopi membawa cita rasa yang mendalam dan aroma yang menggoda selama setengah jam kunjungan Anda. Pilihan kopi berasal dari biji-biji kopi berkualitas tinggi yang dipanggang dengan cermat untuk menghasilkan rasa yang khas dan memikat lidah.</p>           
-            <a href="">Read More</a>
+            <a href="5.html">Read More</a>
 
         </div>
        <div class="img-about">
